@@ -1,6 +1,7 @@
 package com.sourceplot.init;
 
 import java.net.http.HttpClient;
+import java.time.Duration;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -8,6 +9,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
 import com.google.inject.AbstractModule;
 import com.google.inject.Provides;
+import com.google.inject.Singleton;
+import com.sourceplot.init.EnvironmentModule.EnvironmentConfig;
 
 public class ServiceModule extends AbstractModule {
     @Override
@@ -15,6 +18,7 @@ public class ServiceModule extends AbstractModule {
     }
 
     @Provides
+    @Singleton
     public ObjectMapper provideObjectMapper() {
         ObjectMapper objectMapper = new ObjectMapper();
         objectMapper.registerModule(new Jdk8Module());
@@ -22,12 +26,19 @@ public class ServiceModule extends AbstractModule {
     }
 
     @Provides
-    public HttpClient provideHttpClient() {
-        return HttpClient.newHttpClient();
+    @Singleton
+    public ExecutorService provideExecutorService(EnvironmentConfig environmentConfig) {
+        return Executors.newFixedThreadPool(environmentConfig.messagesToProcessConcurrently());
     }
 
     @Provides
-    public ExecutorService provideExecutorService() {
-        return Executors.newFixedThreadPool(50);
+    @Singleton
+    public HttpClient provideHttpClient(EnvironmentConfig environmentConfig) {
+        return HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(30))
+            .executor(Executors.newVirtualThreadPerTaskExecutor())
+            .version(HttpClient.Version.HTTP_2)
+            .followRedirects(HttpClient.Redirect.NORMAL)
+            .build();
     }
 }
